Fixed some layout issues

--- a/style-responsive.css
+++ b/style-responsive.css
@@ -1,4 +1,4 @@
-/* POPPINS FONT FAMILY */
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); 
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
@@ -277,11 +277,7 @@ form {
   }
 
 
-/* 
-===================
-    footer section
-===================
-*/
+
 
   .footer-section{
     height: 225px;
@@ -366,6 +362,7 @@ nav {
     display: none
 }
 
+/*  media query section :*/
 
 @media only screen and (max-width:1240px) {
     header {
